Fix Navber align

--- a/src/sass/components/nav.sass
+++ b/src/sass/components/nav.sass
@@ -9,6 +9,7 @@ navbar
         padding: 15px
         nav
             display: flex
+            align-items: center
             item
                 cursor: pointer
                 padding: 5px
